Fix build errors and optimize configuration
- Fix layout.tsx: Remove invalid <head> tag for Next.js App Router compatibility
- Add viewport export for meta tags in layout.tsx
- Configure webpack to externalize yahoo-finance2 package for server-side rendering
- Replace CowSwap widget with LiFi widget implementation
- Update dependencies and build configuration

Build now completes successfully with all routes properly generated.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@cowprotocol/widget-react": "^0.14.0",
+    "@bigmi/react": "^0.6.0",
+    "@lifi/widget": "^3.40.2",
+    "@mysten/dapp-kit": "^0.19.0",
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
