--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
-    "@tanstack/react-query": "^5.28.0",
+    "@tanstack/react-query": "^5.90.19",
     "cheerio": "^1.1.2",
     "ethers": "^6.13.0",
     "framer-motion": "^11.0.0",
@@ -42,9 +42,11 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
+    "baseline-browser-mapping": "^2.9.15",
     "dotenv": "^17.2.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
+    "pino-pretty": "^13.1.3",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0"
